fix body overflow

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,6 +11,7 @@
 
 body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 code {
